--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "axios": "^1.6.5"
+    "axios": "^1.6.5",
+    "picocolors": "^1.0.0"
   }
 }
