--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - "main"
 
+permissions: 
+  actions: write
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
