--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,8 +4,7 @@ on:
     branches:
       - "main"
 
-permissions: 
-  actions: write
+permissions: write-all
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
